[package]
name = "one_time_pad"
version = "0.1.0"
authors = ["Logan Saso <sasol@oregonstate.edu>"]

[dependencies]
rand = "0.6.0"


[workspace]
members = [
    "otp_enc_d",
    "otp_enc",
    "otp_dec_d",
    "otp_dec",
    "otp_lib",
    "keygen",
]

[lib]
name = "otp_lib"
path = "otp_lib/src/lib.rs"


[[bin]]
name = "otp_enc_d"
path = "otp_enc_d/src/main.rs"

[[bin]]
name = "otp_enc"
path = "otp_enc/src/main.rs"

[[bin]]
name = "otp_dec_d"
path = "otp_dec_d/src/main.rs"

[[bin]]
name = "otp_dec"
path = "otp_dec/src/main.rs"

[[bin]]
name = "keygen"
path = "keygen/src/main.rs"
