[package]
name = "backend"
version = "0.1.0"
authors = ["Logan Saso <sasol@oregonstate.edu>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
mysql = "14.0.0"
mysql_common = "0.12.0"
chrono = { version = "0.4.9", features = ["serde"] }
serde = { version = "1.0.102", features= ["derive"] }
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.2"
features = ["mysql_pool"]
